--- a/package.json
+++ b/package.json
@@ -12,42 +12,33 @@
         "format": "eslint --fix --ignore-path .gitignore . && prettier --write --plugin-search-dir=. ."
     },
     "devDependencies": {
-        "@sveltejs/adapter-auto": "next",
-        "@sveltejs/kit": "^1.0.0-next.507",
+		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/kit": "^1.0.0",
+		"@typescript-eslint/eslint-plugin": "^5.45.0",
+		"@typescript-eslint/parser": "^5.45.0",
+		"eslint": "^8.28.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.1",
+		"svelte": "^3.54.0",
+		"svelte-check": "^3.0.1",
+		"tslib": "^2.4.1",
+		"typescript": "^4.9.3",
+		"vite": "^4.0.0",
+        
         "@turf/turf": "^6.5.0",
-        "@typescript-eslint/eslint-plugin": "^5.38.1",
-        "@typescript-eslint/parser": "^5.38.1",
         "autoprefixer": "^10.4.12",
-        "country-flag-emoji-polyfill": "^0.1.4",
         "d3": "^7.6.1",
         "d3-color": "^3.1.0",
-        "d3-geo": "^3.0.1",
-        "d3-geo-projection": "^4.0.0",
-        "d3-geo-voronoi": "^2.0.1",
         "d3-zoom": "^3.0.0",
-        "emoji-flags": "^1.3.0",
-        "eslint": "^8.24.0",
-        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-simple-import-sort": "^8.0.0",
-        "eslint-plugin-svelte3": "^4.0.0",
-        "geojson-bbox": "^0.0.0",
-        "mapshaper": "^0.5.28",
         "postcss": "^8.4.17",
-        "prettier": "^2.7.1",
-        "prettier-plugin-svelte": "^2.7.1",
         "stylus": "^0.55.0",
-        "svelte": "^3.50.1",
-        "svelte-check": "^2.9.1",
         "svelte-preprocess": "^4.10.7",
-        "tailwindcss": "^3.1.8",
-        "topojson-client": "^3.1.0",
-        "topojson-simplify": "^3.0.3",
-        "tslib": "^2.4.0",
-        "typescript": "^4.8.4",
-        "vite": "^3.2.4"
+        "tailwindcss": "^3.1.8"
     },
     "dependencies": {
-        "lodash": "^4.17.21",
-        "svelte-json-tree": "^1.0.0"
+        "lodash": "^4.17.21"
     }
 }
