--- a/package.json
+++ b/package.json
@@ -12,33 +12,33 @@
         "format": "eslint --fix --ignore-path .gitignore . && prettier --write --plugin-search-dir=. ."
     },
     "devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "^1.0.0",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0",
-        
+        "@sveltejs/adapter-auto": "^1.0.0",
+        "@sveltejs/kit": "^1.0.0",
         "@turf/turf": "^6.5.0",
+        "@typescript-eslint/eslint-plugin": "^5.45.0",
+        "@typescript-eslint/parser": "^5.45.0",
         "autoprefixer": "^10.4.12",
         "d3": "^7.6.1",
         "d3-color": "^3.1.0",
         "d3-zoom": "^3.0.0",
+        "eslint": "^8.28.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-simple-import-sort": "^8.0.0",
+        "eslint-plugin-svelte3": "^4.0.0",
         "postcss": "^8.4.17",
+        "prettier": "^2.8.0",
+        "prettier-plugin-svelte": "^2.8.1",
         "stylus": "^0.55.0",
+        "svelte": "^3.54.0",
+        "svelte-check": "^3.0.1",
         "svelte-preprocess": "^4.10.7",
-        "tailwindcss": "^3.1.8"
+        "tailwindcss": "^3.1.8",
+        "tslib": "^2.4.1",
+        "typescript": "^4.9.3",
+        "vite": "^4.0.0"
     },
     "dependencies": {
+        "clp-wasm": "^0.0.20",
         "lodash": "^4.17.21"
     }
 }
